Actualizar proyecto y agregar archivo .gitignore

--- a/public/dom.html
+++ b/public/dom.html
@@ -7,14 +7,26 @@
 </head>
 <body>
     <h1>Manipulación del DOM</h1>
+
+    <!-- Botón para cambiar el color -->
     <button id="change-color">Cambiar color</button>
     <p id="text">Este texto cambiará de color.</p>
+
+    <!-- Lista inicial -->
     <ul id="list">
         <li>Elemento 1</li>
         <li>Elemento 2</li>
         <li>Elemento 3</li>
     </ul>
+
+    <!-- Botón para agregar un nuevo elemento -->
     <button id="add-item">Agregar elemento</button>
+
+    <!-- Aquí se mostrará el mensaje de la API -->
+    <h2>Datos del API:</h2>
+    <p id="output">Esperando datos del API...</p>
+
+    <!-- Enlace al archivo JavaScript -->
     <script src="dom-script.js"></script>
 </body>
 </html>
